--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,20 +7,16 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+.boton3 {
+  color: #318aac !important;
+  font-weight: 400;
+  padding: 0.3em 1.2em;
+  margin-left: 95px;
 
-.App-header {
-  background-color: #c0c4d2 !important;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.boton3:hover {
+  background: #318aac;
+  color: #fff !important;
 }
 
 @keyframes App-logo-spin {
